# opencv_samples

./: CMakeLists.txt  kmeans.py  mser.py  mser1.py
src/: klt.cpp  mser.cpp  sift.cpp  tojpg.cpp
